# KalaUtils

./: CHANGES.txt  CMakeLists.txt  Linux_prerequisites.txt  README.md  Windows_prerequisites.txt  build_linux_debug.sh  build_linux_release.sh  build_windows_debug.bat  build_windows_release.bat  send_to_engine.bat  send_to_testproject.bat  send_to_window.bat
include/: fileutils.hpp  stringutils.hpp
src/: fileutils.cpp  inpututils.cpp  osutils.cpp  stringutils.cpp  windowutils.cpp
